--- a/tex/docinfo.tex
+++ b/tex/docinfo.tex
@@ -8,7 +8,7 @@
 \newcommand{\hsmatitelde}{Portierung eines Laufplaners für sechsbeinige Laufroboter in das Robot Operating System}
 
 % Titel der Arbeit auf Englisch
-\newcommand{\hsmatitelen}{Transferring of a walk planner for a six-legged walking robot into the robot operating system}
+\newcommand{\hsmatitelen}{Transferring of a gait planner for a six-legged walking robot into the robot operating system}
 
 % Weitere Informationen zur Arbeit
 \newcommand{\hsmaort}{Mannheim}    % Ort
@@ -33,4 +33,4 @@
 \newcommand{\hsmaabstractde}{Diese Bachelorarbeit stellt eine Lösung für die Portierung eines bestehenden Laufplaners für sechsbeinige Laufroboter in das Robot Operating System (ROS) dar, einem open source Meta-Betriebssystem für die Entwicklung von Robotern. Ferner ist der bestehende Laufplaner für den Laufroboter LAURON III erschaffen worden, während die Neuentwicklung für den Laufroboter Akrobat ausgeführt werden soll. Diese Arbeit stellt das Konzept und die Implementierung dafür bereit.}
 
 % Kurze (maximal halbseitige) Beschreibung, worum es in der Arbeit geht auf Englisch
-\newcommand{\hsmaabstracten}{This bachelor thesis provides a solution for the migration of a walk planner of an existing six-legged walking-robot into the Robot Operating System (ROS). The ROS is an open source meta operating system used for the development of robots. The current walk planner is made for the LAURON III while the new planner should be made for the walking robot Akrobat. This bachelor thesis shows the concept and the implementation of this task.}
+\newcommand{\hsmaabstracten}{This bachelor thesis provides a solution for the migration of a gait planner of an existing six-legged walking-robot into the Robot Operating System (ROS). The ROS is an open source meta operating system used for the development of robots. The current walk planner is made for the LAURON III while the new planner should be made for the walking robot Akrobat. This bachelor thesis shows the concept and the implementation of this task.}
