--- a/tex/kapitel/abkuerzungen.tex
+++ b/tex/kapitel/abkuerzungen.tex
@@ -8,4 +8,5 @@
 \acro{STL}{STereoLithographie}
 \acro{Xacro}{XML Macros}
 \acro{ODE}{Open Dynamics Engine}
+\acro{MCA}{Modular controller software architecture}
 \end{acronym}
