--- a/tex/kapitel/kapitel_3_verwandt.tex
+++ b/tex/kapitel/kapitel_3_verwandt.tex
@@ -1,7 +1,7 @@
 \chapter{Verwandte Arbeiten}
 \label{kap3}
 
-Dieses Kapitel stellt weitere Arbeiten da, die sich mit dem Thema der Laufplanung von sechsbeinigen Laufrobotern mittels Random Sampling auseinandergesetzt haben.
+Dieses Kapitel stellt weitere Arbeiten dar, die sich mit dem Thema der Laufplanung von sechsbeinigen Laufrobotern mittels Random Sampling auseinandergesetzt haben.
 
 Andrè Herms \autocite{herms2004} vergleicht zunächst die folgenden Algorithmen zur Laufplanung:
 \begin{itemize}
