--- a/tex/preambel.tex
+++ b/tex/preambel.tex
@@ -256,6 +256,8 @@
 ]{siunitx}
 
 
-\sisetup{per-mode=reciprocal}
+\sisetup{per-mode=reciprocal,mode=text,range-phrase = {\text{~bis~}}}
 
 \usepackage{stix}
+
+\usepackage[sort&compress,numbers]{natbib}
